--- a/angular.json
+++ b/angular.json
@@ -11,6 +11,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref" : "/meat/",
+            "deployUrl": "/meat/",
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -21,7 +23,6 @@
               "src/favicon.ico"
             ],
             "styles": [
-              {"input": "node_modules/font-awesome/css/font-awesome.min.css"},
               {"input": "node_modules/admin-lte/bootstrap/css/bootstrap.min.css"},
               {"input": "node_modules/admin-lte/dist/css/AdminLTE.min.css"},
               {"input": "node_modules/admin-lte/dist/css/skins/skin-red.min.css"},
